@startuml
hide methods

' Aggregates
class Customer
class ShowRequest
class ShowProposal
class Drone
class User
class Figure
class SignupRequest
class Utente
class DroneModel
class DroneType

' Value Objects
class Name
class VAT
class Address
class NIF
class SerialNumber
class Date
class Status
class Report
class Username
class Password
class Email
class Phone
class MecanographicNumber
class ShowRequestId
class Language

' Entities
class Representative
class Maintenance
class FigureCategory

' Relationships with names
Customer --> Name : has >
Customer --> VAT : has >
Customer --> Address : has >
Customer --> Representative : has many >
Representative --> Name : has >
Representative --> NIF : has >
ShowRequest --> Customer : requested by >
ShowRequest --> ShowRequestId : has >
ShowRequest --> Drone : uses >
ShowRequest --> Date : scheduled for >
ShowRequest --> Figure : includes >
Drone --> DroneModel : is of >
Drone --> SerialNumber : identified by >
Drone --> Maintenance : undergoes >
DroneModel --> Language : has >
DroneModel --> Name : has >
DroneModel --> Maintenance : has >
DroneType --> Name : has >
Figure --> DroneType : requires >
ShowProposal --> Drone : uses >
ShowProposal --> Date : scheduled for >
ShowProposal --> Status : has >
ShowProposal --> Report : includes >
User --> Username : identified by >
User --> Password : authenticated with >
User --> Email : contacted via >
User --> Phone : contacted via >
Figure --> FigureCategory : belongs to >
SignupRequest --> Username : has >
SignupRequest --> Email : has >
Utente --> MecanographicNumber : has >
Utente --> Name : has >

@enduml